--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
     <!-- css -->
-     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
@@ -25,7 +25,9 @@
     <header>
       <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="svg/logo.svg" alt="logo"></a>
+          <a class="navbar-brand" href="#"
+            ><img src="svg/logo.svg" alt="logo"
+          /></a>
           <button
             class="navbar-toggler d-lg-none"
             type="button"
@@ -59,7 +61,60 @@
       </nav>
     </header>
     <!-- nav end -->
-    <main></main>
+    <main>
+      <!-- banner start -->
+      <secton id="banner">
+        <div class="container">
+          <div class="bnr-box">
+            <div class="txt">
+              <h1>Your strategy is only as good as you execute it</h1>
+              <p>
+                Our simple but powerful OKR+ platform turns great strategies
+                into amazing results. And it's free.
+              </p>
+              <form action="#">
+                <div class="box">
+                  <input
+                    type="email"
+                    placeholder="enter your email"
+                    required="required"
+                  />
+                  <button type="submit">Get Started</button>
+                </div>
+              </form>
+            </div>
+            <div class="iamge">
+              <img
+                src="images/bnrvictor1.png"
+                alt="bnrvictor1"
+                class="bnrvictor1"
+              />
+              <img src="images/bnrimages.png" alt="bnrimages" />
+              <img
+                src="images/bnrvictor2.png"
+                alt="bnrvictor2"
+                class="bnrvictor2"
+              />
+            </div>
+          </div>
+        </div>
+      </secton>
+      <!-- banner end -->
+      <!-- solution start -->
+       <section id="solution">
+        <div class="container">
+          <div class="title">
+            <h2>One product, three solutions</h2>
+          </div>
+          <div class="solution-box">
+            <div class="item">
+              <h3>Roadmap to success</h3>
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- solution end -->
+    </main>
     <footer>
       <!-- place footer here -->
     </footer>
