solution section added

--- a/index.html
+++ b/index.html
@@ -108,7 +108,22 @@
           </div>
           <div class="solution-box">
             <div class="item">
+              <img src="svg/roadmap.svg" alt="roadmap" class="solu-logo"/>
               <h3>Roadmap to success</h3>
+              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
+              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
+            </div>
+            <div class="item">
+              <img src="svg/goal.svg" alt="goal" class="solu-logo"/>
+              <h3>Goals that matter</h3>
+              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
+              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
+            </div>
+            <div class="item">
+              <img src="svg/achivement.svg" alt="achivement" class="solu-logo"/>
+              <h3>Visible achievements</h3>
+              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
+              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
             </div>
           </div>
         </div>
