--- a/index.html
+++ b/index.html
@@ -101,34 +101,107 @@
       </secton>
       <!-- banner end -->
       <!-- solution start -->
-       <section id="solution">
+      <section id="solution">
         <div class="container">
           <div class="title">
             <h2>One product, three solutions</h2>
           </div>
           <div class="solution-box">
             <div class="item">
-              <img src="svg/roadmap.svg" alt="roadmap" class="solu-logo"/>
+              <img src="svg/roadmap.svg" alt="roadmap" class="solu-logo" />
               <h3>Roadmap to success</h3>
-              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
-              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
+              <p>
+                Design your future. Share your strategy with the people
+                responsible for delivering it. Create clarity and buy-in.
+              </p>
+              <a href="#"
+                ><span>Learn More</span
+                ><img src="svg/rightarrow.svg" alt="rightarrow"
+              /></a>
             </div>
             <div class="item">
-              <img src="svg/goal.svg" alt="goal" class="solu-logo"/>
+              <img src="svg/goal.svg" alt="goal" class="solu-logo" />
               <h3>Goals that matter</h3>
-              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
-              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
+              <p>
+                Design your future. Share your strategy with the people
+                responsible for delivering it. Create clarity and buy-in.
+              </p>
+              <a href="#"
+                ><span>Learn More</span
+                ><img src="svg/rightarrow.svg" alt="rightarrow"
+              /></a>
             </div>
             <div class="item">
-              <img src="svg/achivement.svg" alt="achivement" class="solu-logo"/>
+              <img
+                src="svg/achivement.svg"
+                alt="achivement"
+                class="solu-logo"
+              />
               <h3>Visible achievements</h3>
-              <p>Design your future. Share your strategy with the people responsible for delivering it. Create clarity and buy-in.</p>
-              <a href="#"><span>Learn More</span><img src="svg/rightarrow.svg" alt="rightarrow"></a>
+              <p>
+                Design your future. Share your strategy with the people
+                responsible for delivering it. Create clarity and buy-in.
+              </p>
+              <a href="#"
+                ><span>Learn More</span
+                ><img src="svg/rightarrow.svg" alt="rightarrow"
+              /></a>
             </div>
           </div>
         </div>
-       </section>
+      </section>
       <!-- solution end -->
+      <!-- place start -->
+      <section id="place">
+        <img src="svg/placeshap.svg" alt="placeshap" class="placeshap" />
+        <div class="container">
+          <div class="placeoverview">
+            <div class="item">
+              <div class="txt">
+                <h2>Finally a place where it all comes together</h2>
+                <p>
+                  Bring together your strategy with the goals that need to
+                  deliver your strategy, and the people that need to deliver
+                  those goals.
+                </p>
+                <a href="#"
+                  ><span>learn more</span
+                  ><img src="svg/rightarrow.svg" alt="rightarrow"
+                /></a>
+              </div>
+              <div class="image">
+                <img src="images/placecard.png" alt="placecard">
+              </div>
+            </div>
+            <div class="item">
+              <div class="image">
+                <img src="images/overviewcard.png" alt="overviewcard">
+              </div>
+              <div class="txt">
+                <h2>The overview you’ve always wanted</h2>
+                <p>
+                  Stop guessing. Know what’s going on and see how everything is progressing. Take action when needed and coach your team to success.
+                </p>
+                <a href="#"
+                  ><span>learn more</span
+                  ><img src="svg/rightarrow.svg" alt="rightarrow"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- place end -->
+       <!-- join start -->
+        <section id="join">
+          <div class="container">
+            <div class="title">
+              <h2>Join hundreds of successful organizations</h2>
+              <p>Companies of every size, and in 62 different countries, are using Perdoo to beat their competitors.</p>
+            </div>
+          </div>
+        </section>
+       <!-- join end -->
     </main>
     <footer>
       <!-- place footer here -->
